--- a/query.css
+++ b/query.css
@@ -341,6 +341,9 @@
     .btn {
         font-size: 2.4rem;
     }
+    .btn__option-2 {
+        margin-top: 2.4rem;
+    }
     .section__feature {
         padding: 4.8rem 7.2rem 4.8rem 7.2rem;
     }
