--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html {
 body {
     font-family: "Rubik", sans-serif;
     color: #555;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 /* HEADER */
 .header {
@@ -34,6 +34,22 @@ body {
     padding: 0 4.8rem;
 }
 
+.section--hidden {
+    opacity: 0;
+    transform: translateY(12rem);
+}
+
+img {
+    transition: filter 0.5s;
+  }
+
+.lazy-img {
+    filter: blur(20px);
+}
+
+.section-- {
+    transition: transform 1s, opacity 1s;
+}
 .sticky .header {
     position: fixed;
     width: 100%;
@@ -816,7 +832,8 @@ body {
     width: 100%;
 }
 
-.sign-up:hover, .sign-up:active {
+.sign-up:hover,
+.sign-up:active {
     background-color: #fdf2e9;
     color: #555;
 }
